--- a/src/screens/match flow/matchflow2/style1.css
+++ b/src/screens/match flow/matchflow2/style1.css
@@ -7,6 +7,8 @@
 
 .form-container {
   display: flex;
+  top:5%;
+  position: relative;
   gap: 2rem;
   align-items: flex-start;
 }
@@ -98,16 +100,14 @@
 @media (max-width: 768px) {
   .sidebar {
     position: fixed;
-    top: 0;
-    left: 0;
     bottom: 0;
     z-index: 100;
     background-color: var(--background);
   }
   
-  .main-content {
+  /* .main-content {
     margin-left: 0;
-  }
+  } */
   
   .menu-toggle {
     display: block;
